<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCU Mobile Public Access Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <string name="info">Book Information</string>
    
    <string name="accessno">Access No :</string>
    <string name="title">Title :</string>
    <string name="author">Author :</string>
    <string name="publisher">Publisher :</string>
    <string name="edition">Edition :</string>
    <string name="volume">Volume :</string>
    <string name="pages">Pages :</string>
    <string name="cyear">C-Year :</string>
    <string name="csection">C-Section :</string>
    <string name="copies">Copies :</string>
    <string name="babarcode">Babarcode :</string>
    <string name="completecn">Complete CN :</string>
    <string name="format">Format :</string>
    
    <string name="ucu">Urdaneta City University</string>
    <string name="lib">Library Book Collections</string>
    
    <string name="btnFav">Add to favorites</string>
    <string name="txt">No added favorites</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Books</item>
        <item>Favorites</item>
        <item>History</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_books</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_history</item>
        <item>@drawable/ic_about</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_books_fragment">Books</string>
    <string name="title_activity_about_fragment">About</string>
    <string name="title_activity_book_search">Book</string>
    <string name="title_activity_favorites_fragment">Favorites</string>
    <string name="title_activity_history_fragment">History</string>

</resources>
